--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NUAR Studio | Конструктор для стримеров</title>
+    <title>NUAR Studio</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700;800;900&family=JetBrains+Mono:wght@300;400;500;600&display=swap" rel="stylesheet">
     
@@ -468,7 +468,7 @@
             </button>
             
             <p style="color: #a0b8d0; font-size: 0.9rem; margin-top: 1.5rem;">
-                После оплаты отправьте скриншот чека на nuar.support@gmail.com
+                После оплаты отправьте скриншот чека на sauronaaaa@yandex.ru
             </p>
         </div>
     </div>
